--- a/ERP/Core.Erp.Web/Views/Layout/_LayoutConsulta.cshtml
+++ b/ERP/Core.Erp.Web/Views/Layout/_LayoutConsulta.cshtml
@@ -104,7 +104,7 @@
                             }).GetHtml()
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                             </div>
                         </div>
 
@@ -117,15 +117,14 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Menú</h4>
                             </div>
                             <div class="modal-body">
-
-                                @Html.Action("GridViewPartial_entidad_cmb", new { Area = "Persona" })
-
+                                @*
+        @Html.Action("GridViewPartial_entidad_cmb", new { Area = "Persona" })
+                                *@
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                             </div>
                         </div>
 
