--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-    ViewBag.Title = "Egresos";
+    ViewBag.Title = "Distribución de lotes";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
