--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/Nuevo.cshtml
@@ -19,6 +19,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
+                    <label for="cm_observacion">Detalle de items por distribuir</label>
                     @Html.Action("GridViewPartial_por_distribuir")
                 </div>
             </div>
@@ -28,6 +29,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
+                    <label for="cm_observacion">Detalle de items distribuidos</label>
                     @Html.Action("GridViewPartial_distribuidos")
                 </div>
             </div>
