--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
@@ -55,6 +55,7 @@
         GetPeriodo();
         GetSaldoAnterior();
         GetIngresos();
+        $("#link_op").hide();
     });
 
     function MostrarOcultarOP() {
@@ -135,7 +136,8 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                $("#Saldo_cont_al_periodo").val(Math.round(Number(data),2));
+                $("#Saldo_cont_al_periodo").val(Math.round(Number(data), 2));
+                $("#Saldo_cont_al_periodoR").val(Math.round(Number(data), 2));
             },
             error: function (error) {
             }
@@ -225,10 +227,15 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
                 $("#Ingresos").val(data.Ingresos);
+                $("#IngresosR").val(data.Ingresos);
                 $("#Total_Ing").val(data.Dif_ingresos);
+                $("#Total_IngR").val(data.Dif_ingresos);
                 $("#Total_fondo").val(data.Fondo);
+                $("#Total_fondoR").val(data.Fondo);
                 $("#Total_fact_vale").val(data.Total_fact_vales);
+                $("#Total_fact_valeR").val(data.Total_fact_vales);
                 $("#Dif_x_pagar_o_cobrar").val(data.Diferencia);
+                $("#Dif_x_pagar_o_cobrarR").val(data.Diferencia);
             },
             error: function (error) {
             }
@@ -270,6 +277,13 @@
         </div>
 
     }
+    @Html.HiddenFor(q => q.Saldo_cont_al_periodo, new { @id = "Saldo_cont_al_periodo" })
+    @Html.HiddenFor(q => q.Ingresos, new { @id = "Ingresos" })
+    @Html.HiddenFor(q => q.Total_Ing, new { @id = "Total_Ing" })
+    @Html.HiddenFor(q => q.Total_fondo, new { @id = "Total_fondo" })
+    @Html.HiddenFor(q => q.Total_fact_vale, new { @id = "Total_fact_vale" })
+    @Html.HiddenFor(q => q.Dif_x_pagar_o_cobrar, new { @id = "Dif_x_pagar_o_cobrar" })
+
     @Html.HiddenFor(q => q.IdEmpresa)
     <div class="modal fade" id="FacturasModal" role="dialog">
         <div class="modal-dialog modal-lg">
@@ -368,36 +382,36 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="Saldo_cont_al_periodo">Saldo contable anterior</label>
-                    @Html.TextBoxFor(q => q.Saldo_cont_al_periodo, new { @id = "Saldo_cont_al_periodo", @class = "form-control", @readonly = "readonly" })
+                    @Html.TextBoxFor(q => q.Saldo_cont_al_periodo, new { @id = "Saldo_cont_al_periodoR", @class = "form-control", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.Saldo_cont_al_periodo, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
                     <label for="Ingresos">Ingresos</label>
-                    @Html.TextBoxFor(q => q.Ingresos, new { @id = "Ingresos", @class = "form-control", @readonly = "readonly" })
+                    @Html.TextBoxFor(q => q.Ingresos, new { @id = "IngresosR", @class = "form-control", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.Ingresos, "", new { @class = "text-danger" })
                 </div>
                 <hr />
                 <div class="form-group">
                     <label for="Total_Ing">Ingresos</label>
-                    @Html.TextBoxFor(q => q.Total_Ing, new { @id = "Total_Ing", @class = "form-control", @readonly = "readonly" })
+                    @Html.TextBoxFor(q => q.Total_Ing, new { @id = "Total_IngR", @class = "form-control", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.Total_Ing, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="Total_fondo">Fondo</label>
-                    @Html.TextBoxFor(q => q.Total_fondo, new { @id = "Total_fondo", @class = "form-control", @readonly = "readonly" })
+                    @Html.TextBoxFor(q => q.Total_fondo, new { @id = "Total_fondoR", @class = "form-control", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.Total_fondo, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
                     <label for="Total_fact_vale">Total fact. y vales</label>
-                    @Html.TextBoxFor(q => q.Total_fact_vale, new { @id = "Total_fact_vale", @class = "form-control", @readonly = "readonly" })
+                    @Html.TextBoxFor(q => q.Total_fact_vale, new { @id = "Total_fact_valeR", @class = "form-control", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.Total_fact_vale, "", new { @class = "text-danger" })
                 </div>
                 <hr />
                 <div class="form-group">
                     <label for="Dif_x_pagar_o_cobrar">Diferencia</label>
-                    @Html.TextBoxFor(q => q.Dif_x_pagar_o_cobrar, new { @id = "Dif_x_pagar_o_cobrar", @class = "form-control", @readonly = "readonly" })
+                    @Html.TextBoxFor(q => q.Dif_x_pagar_o_cobrar, new { @id = "Dif_x_pagar_o_cobrarR", @class = "form-control", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.Dif_x_pagar_o_cobrar, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -416,7 +430,7 @@
                 <a href="#tab_ingresos" aria-controls="ingresos" role="tab" data-toggle="tab">Ingresos</a>
             </li>
             <li>
-                <a href="#tab_op" aria-controls="vales" role="tab" data-toggle="tab" id="link_op" hidden>Orden de pago</a>
+                <a href="#tab_op" aria-controls="vales" role="tab" data-toggle="tab" id="link_op">Orden de pago</a>
             </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
