--- a/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
                                    }).GetHtml()
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                                     </div>
                                 </div>
 
