--- a/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/Caja/Nuevo.cshtml
@@ -41,14 +41,14 @@
                     <label for="IdSucursal">Sucursal</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdSucursal, settings =>
                {
-                   settings.Name = "IdCtaCblePadre";
+                   settings.Name = "IdSucursal";
                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                    settings.Properties.DisplayFormatString = "[{0}] - {1}";
                    settings.Properties.Columns.Add("IdSucursal", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
                    settings.Properties.Columns.Add("Su_Descripcion", "Descripcion").Width = System.Web.UI.WebControls.Unit.Percentage(50);
                    //Campo ID
                    settings.Properties.ValueField = "IdSucursal";
-                   settings.Properties.ValueType = typeof(string);
+                   settings.Properties.ValueType = typeof(int);
                    settings.Properties.TextField = "Su_Descripcion";
                    //Boton para seleccionar ningun registro
                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
@@ -93,7 +93,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdUsuario_Responsable">Responsable</label>
-                    @Html.DropDownListFor(q => q.IdUsuario_Responsable, new SelectList(ViewBag.lst_responsable, "IdUsuario_Responsable", "IdUsuario_Responsable"), new { @class = "form-control", @id = "IdUsuario_Responsable" })
+                    @Html.DropDownListFor(q => q.IdUsuario_Responsable, new SelectList(ViewBag.lst_responsable, "IdUsuario", "Nombre"), new { @class = "form-control", @id = "IdUsuario_Responsable" })
                     @Html.ValidationMessageFor(q => q.IdUsuario_Responsable, "", new { @class = "text-danger" })
                 </div>
             </div>
